Right align buttons, prevent cancel button from saving form

--- a/app/assets/stylesheets/new_route.scss
+++ b/app/assets/stylesheets/new_route.scss
@@ -114,7 +114,6 @@
           justify-content: flex-end;
           background-color: $save-form-body-gray;
           height: 70px;
-          padding: 0 30px;
           font-size: 14px;
           align-items: center;
           .modal-button {
